syntax = "proto3";

package validation.v1;

option go_package = "github.com/albelikov/nodeorb/scm-service/api/grpc/validation/v1;validationv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ValidationService provides validation capabilities for various entities
service ValidationService {
  // ValidateGeofence validates geographic coordinates against allowed zones
  rpc ValidateGeofence(GeofenceValidationRequest) returns (GeofenceValidationResponse);
  
  // DetectGPSSpoofing detects GPS spoofing attempts
  rpc DetectGPSSpoofing(GPSSpoofingDetectionRequest) returns (GPSSpoofingDetectionResponse);
  
  // ValidateSensitiveDataAccess validates access to sensitive data
  rpc ValidateSensitiveDataAccess(SensitiveDataAccessRequest) returns (SensitiveDataAccessResponse);
  
  // CheckSanctions performs sanctions screening
  rpc CheckSanctions(SanctionsCheckRequest) returns (SanctionsCheckResponse);
}

// GeofenceValidationRequest represents a geofence validation request
message GeofenceValidationRequest {
  string user_id = 1;
  string order_id = 2;
  double payload_geo_lat = 3;
  double payload_geo_lon = 4;
  double cargo_latitude = 5;
  double cargo_longitude = 6;
  google.protobuf.Timestamp timestamp = 7;
}

// GeofenceValidationResponse represents the geofence validation result
message GeofenceValidationResponse {
  string user_id = 1;
  string order_id = 2;
  bool is_within_route = 3;
  double distance_to_cargo = 4;
  bool access_granted = 5;
  bool gps_spoofing_detected = 6;
  double spoofing_confidence = 7;
  repeated string spoofing_anomalies = 8;
  google.protobuf.Timestamp validated_at = 9;
}

// GPSSpoofingDetectionRequest represents a GPS spoofing detection request
message GPSSpoofingDetectionRequest {
  string user_id = 1;
  DeviceLocation current_location = 2;
  DeviceLocation previous_location = 3;
}

// DeviceLocation represents a device location
message DeviceLocation {
  double latitude = 1;
  double longitude = 2;
  google.protobuf.Timestamp timestamp = 3;
  double altitude = 4;
  double accuracy = 5;
}

// GPSSpoofingDetectionResponse represents the GPS spoofing detection result
message GPSSpoofingDetectionResponse {
  string user_id = 1;
  bool is_spoofing_detected = 2;
  double confidence = 3;
  repeated string detected_anomalies = 4;
  google.protobuf.Timestamp detected_at = 5;
}

// SensitiveDataAccessRequest represents a sensitive data access validation request
message SensitiveDataAccessRequest {
  string user_id = 1;
  string data_type = 2;
  double user_latitude = 3;
  double user_longitude = 4;
  string required_security_level = 5;
  google.protobuf.Timestamp timestamp = 6;
}

// SensitiveDataAccessResponse represents the sensitive data access validation result
message SensitiveDataAccessResponse {
  string user_id = 1;
  string data_type = 2;
  bool has_required_security_level = 3;
  bool is_location_allowed = 4;
  bool is_in_secure_zone = 5;
  bool access_granted = 6;
  google.protobuf.Timestamp validated_at = 7;
}

// SanctionsCheckRequest represents a sanctions check request
message SanctionsCheckRequest {
  string entity_id = 1;
  string entity_name = 2;
  string entity_type = 3; // PERSON, COMPANY, VESSEL, etc.
  string country = 4;
  string registration_number = 5;
  google.protobuf.Timestamp timestamp = 6;
}

// SanctionsCheckResponse represents the sanctions check result
message SanctionsCheckResponse {
  string entity_id = 1;
  bool is_sanctioned = 2;
  repeated SanctionList matched_lists = 3;
  string reason = 4;
  google.protobuf.Timestamp checked_at = 5;
}

// SanctionList represents a sanction list
message SanctionList {
  string name = 1; // OFAC, EU, UN, BIS, etc.
  string url = 2;
  string last_updated = 3;
  string description = 4;
}